# sentinel

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/sentinel/: __init__.py  cli.py  config.py
src/sentinel/agent/: llm.py  loop.py  tools.py
src/sentinel/api/: app.py
src/sentinel/eval/: dataset.py  metrics.py  runner.py
src/sentinel/ingestion/: chunking.py  image_extractor.py  pipeline.py  text_extractor.py
src/sentinel/observability/: logging.py  tracing.py
src/sentinel/retrieval/: retriever.py  vector_store.py
tests/: test_agent_tools.py  test_chunking.py  test_llm_factory.py  test_metrics.py  test_ollama_client.py
tests/fixtures/: eval_dataset.json  sample.txt
